--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
     margin: 0;
     padding: 0;
     text-align: center;
-    background-image: url(../cookies_clicker/image/fond.png);
+    background-image: url(image/fond.png);
     background-size: cover;
     height: 100vh;
     overflow: hidden;
